[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syre"
dynamic = ["version"]
description = "Python library for Syre data analysis and management."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT OR Apache-2.0"
keywords = ["data management", "data analysis"]
authors = [
  { name="Brian Carlsen", email="carlsen.bri@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["pyzmq"]

[project.urls]
Issues = "https://github.com/syre-data/syre/issues"
Source = "https://github.com/syre-data/syre"
Homepage = "https://syre.ai"

[tool.hatch.version]
path = "src/syre/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = []

[tool.hatch.build.targets.wheel]
packages = ["src/syre"]