[package]
name = "syre-data"
version = "0.10.0-intermediate"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Rust language bindings for Syre data management and analysis software."
license = "MIT OR Apache-2.0"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
zmq = { workspace = true }


syre-core = { path = "../../core" }
syre-local = { path = "../../local" }
syre-local-database = { path = "../../local/database", features = ["client"] }
