[package]
name = "syre-local-database"
version = "0.0.2"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Local database for Syre resources."
license = "MIT OR Apache-2.0"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "science", "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-id = "0.2.1"
futures = "0.3.28"
indexmap = { workspace = true, features = ["serde"] }
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"], optional = true}
notify-debouncer-full = { version = "0.3", default-features = false, optional = true}
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["time", "json"] }
trash = { version = "3.0", optional = true }
zmq = { workspace = true, optional = true }

has_id = { path = "../../has_id", optional = true }
file_path_from_id = { path = "../../file_path_from_id" }
syre-core = { path = "../../core" }
syre-local = { path = "..", default-features = false }

[dev-dependencies]
rand = "0.8"
fake = "2.4"
lazy_static = "1.4"
tempfile = "3.9.0"

dev_utils = { path = "../../dev_utils", features = ["syre_core"] }

[features]
default = ["error"]
server = ["dep:zmq", "syre-local/fs", "dep:has_id", "dep:trash", "dep:notify", "dep:notify-debouncer-full"]
client = ["dep:zmq"]
error = []
