[package]
name = "syre-local-database"
version = "0.0.3"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Local database for Syre resources."
license = "MIT OR Apache-2.0"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "science", "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde"] }
file-id = "0.2"
futures = "0.3"
indexmap = { workspace = true, features = ["serde"] }
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"], optional = true }
notify-debouncer-full = { version = "0.3", default-features = false, optional = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"], optional = true }
thiserror = { workspace = true }
tokio = { version = "1.36", features = ["sync", "macros", "rt-multi-thread"], optional = true }
tracing = { workspace = true }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["time", "json"] }
trash = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde", "v4"] }
zmq = { workspace = true, optional = true }

has_id = { workspace = true, optional = true }
file_path_from_id = { workspace = true }
syre-core = { workspace = true }
syre-local = { workspace = true, default-features = false }

[dev-dependencies]
rand = "0.8"
fake = "2.4"
lazy_static = "1.4"
tempfile = "3.9.0"

dev_utils = { path = "../../dev_utils", features = ["syre_core"] }

[features]
default = ["error"]
server = [
	"dep:zmq",
	"syre-local/fs",
	"syre-core/surreal_db",
	"dep:has_id",
	"dep:trash",
	"dep:notify",
	"dep:notify-debouncer-full",
	"dep:tokio",
	"dep:surrealdb"
]
client = ["dep:zmq"]
error = []
