[package]
name = "syre-local-database"
version = "0.0.3"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Local database for Syre resources."
license = "MIT OR Apache-2.0"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "science", "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde"] }
crossbeam = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["full"] }
file-id = { version = "0.2", optional = true }
futures  = { workspace = true, optional = true }
ignore  = { workspace = true, optional = true }
notify = { workspace = true, default-features = false, optional = true }
regex = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"], optional = true }
thiserror = { workspace = true }
tokio = { version = "1.36", features = ["sync", "macros", "rt-multi-thread"], optional = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["time", "json", "env-filter"] }
trash = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
zmq = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

syre-core = { workspace = true }
syre-local = { workspace = true }
syre-fs-watcher = { workspace = true, optional = true }
has_id = { workspace = true, optional = true }
file_path_from_id = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.8"
fake = "2.4"
lazy_static = "1.4"
tempfile = "3.9.0"
test-log = { version = "0.2.16", features = ["trace"] }
zmq.workspace = true

[features]
default = ["error"]
server = [
	"syre-local/fs",
	"syre-core/surreal_db",
	"dep:syre-fs-watcher",
	"dep:crossbeam",
	"dep:file_path_from_id",
	"dep:file-id",
	"dep:futures",
	"dep:has_id",
	"dep:ignore",
	"dep:notify",
	"dep:rayon",
	"dep:regex",
	"dep:surrealdb",
	"dep:tokio",
	"dep:trash",
	"dep:zmq",
]
client = [
	"dep:zmq",
	"dep:crossbeam",
]
error = []
