[package]
name = "syre-file_watcher"
version = "0.0.1"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Local file watcher for Syre resources."
license = "MIT OR Apache-2.0"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data" ]
categories = []


[dependencies]
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"], optional = true }
notify-debouncer-full = { version = "0.3", default-features = false, optional = true }
syre-core = { workspace = true }
