[package]
name = "syre-fs-watcher"
version = "0.0.1"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Local file system watcher for Syre resources."
license = "MIT OR Apache-2.0"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data" ]
categories = []


[dependencies]
file_path_from_id = { workspace = true }
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-full = { version = "0.3", default-features = false }
syre-core = { workspace = true }
syre-local = { workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["v7"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time", "json"] }
file-id = "0.2.1"
crossbeam = { workspace = true, features = ["crossbeam-channel"] }
derive_more = { workspace = true }
has_id = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
test-log = { version = "0.2.15", features = ["trace"] }
test-utils = { path = "test_utils", features = ["syre_core", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
