[package]
name = "settings_manager_change_path"
version = "0.0.1"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Macro for setting the path of a Settings object. Used for testing."
license = 'GPL-3.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
tempfile = "3.3"
syn = { version = "1.0", features = [ "full", "extra-traits", "printing",
"fold", "parsing" ] }
quote = "1.0"
settings_manager = { path = ".." }

[dev-dependencies]
macrotest = "1.0"
serde = { version = "1.0", features = ["derive"] }
cluFlock = "1.2"
