[package]
name = "settings_manager_derive"
version = "0.1.0"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Custom derive for the `settings_manager` crate."
license = "MIT OR Apache-2.0"

repository = "https://github.com/thot-data/settings_manager"
keywords = []
categories = []

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
