[package]
name = "thot-local-database-cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["time", "json"] }
zmq = "0.10.0"

thot-core = { path = "../../../core", features=["clap"] }
thot-local = { path = "../../../local" }
thot-local-database = { path = "..", features = ["client"] }