[package]
name = "syre-local-database-cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["time", "json"] }
zmq = { workspace = true }

syre-core = { path = "../../../core", features=["clap"] }
syre-local = { path = "../../../local" }
syre-local-database = { path = "..", features = ["client"] }
notify-debouncer-full = "0.3.1"
notify = "6.1.1"
