[package]
name = 'thot'
version = '0.0.1'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'thot'

[dependencies]
extendr-api = '*'

thot-core = { path = "../../../../core" }
# thot-local = { path = "../../../../local" }
# thot-local-database = { path = "../../../../local/database", features = ["client"] }
