[package]
name = 'thot'
version = '0.0.1'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'thot'

[dependencies]
current_platform = "0.2"
extendr-api = '0.4'

thot-core = { path = "../../../../core", features = ["extendr"] }
thot-lang = { path = "../../.." }
thot-local = { path = "../../../../local" }
thot-local-database = { path = "../../../../local/database", features = ["client"] }
