[package]
name = 'thot'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'thot'

[dependencies]
extendr-api = '*'
serde = "1.0"
serde_json = "1.0"

thot-core = { path = "/home/brian/Dropbox/Documents/www/thot/src/core" }
thot-local = { path = "/home/brian/Dropbox/Documents/www/thot/src/local" }
