[package]
name = 'thot'
version = '0.0.1'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'thot'

[dependencies]
current_platform = "0.2"
# extendr-api = '0.4'
extendr-api = { git = "https://github.com/bicarlsen/extendr", branch = "bug-raw_identifiers" }
serde_json = "1.0.96"

# thot-core = { path = "../../../../core", features = ["extendr"] }
# thot-lang = { path = "../../.." }
# thot-local = { path = "../../../../local" }
# thot-local-database = { path = "../../../../local/database", features = ["client" ] }

thot-core = { path = "/home/brian/Dropbox/Documents/www/thot/src/core", features = ["extendr"] }
thot-lang = { path = "/home/brian/Dropbox/Documents/www/thot/src/lang" }
thot-local = { path = "/home/brian/Dropbox/Documents/www/thot/src/local" }
thot-local-database = { path = "/home/brian/Dropbox/Documents/www/thot/src/local/database", features = ["client" ] }
